--- a/app/src/main/res/anim/title_float.xml
+++ b/app/src/main/res/anim/title_float.xml
@@ -1,7 +1,6 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:fillAfter="true"
-    android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-    >
+    android:interpolator="@android:anim/accelerate_decelerate_interpolator">
 
     <translate
         android:duration="500"
