--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#000000</color>
-    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorPrimary">#073b4c</color>
+    <color name="colorPrimaryDark">#073b4c</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="background">#073b4c</color>
     <color name="main_text">#FFFFFF</color>
