--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowAnimationStyle">
+            @style/WindowAnimations</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -17,5 +19,17 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="WindowAnimations">
+        <item name="android:activityOpenEnterAnimation">
+            @anim/enter_activity</item>
+        <item name="android:activityOpenExitAnimation">
+            @anim/exit_activity</item>
+        <item name="android:activityCloseEnterAnimation">
+            @anim/enter_activity</item>
+        <item name="android:activityCloseExitAnimation">
+            @anim/exit_activity</item>
+    </style>
+
 
 </resources>
