--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -53,5 +53,38 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <TableLayout
+            android:id="@+id/scoreTable"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="1dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView3">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_weight="4"
+                    android:text="Player Name"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/main_text" />
+
+                <TextView
+                    android:layout_weight="1"
+                    android:text="Score"
+                    android:textAlignment="viewEnd"
+                    android:textColor="@color/main_text" />
+
+
+            </TableRow>
+
+
+        </TableLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
