--- a/app/src/main/res/layout/activity_join_game.xml
+++ b/app/src/main/res/layout/activity_join_game.xml
@@ -77,4 +77,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_letsparty" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:translationZ="90dp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_joinRoom" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
